--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
+    "vue-router": "^3.0.6",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
