--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
+    "vue-scrollto": "^2.17.1",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^1.1.0",
+    "vue-smooth-scroll": "^1.0.13",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   },
