--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.1.2",
+    "firebase": "^7.2.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.17.1",
