minor view edit

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.17.1",
+    "vue-typer": "^1.2.0",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
