--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.1.2",
-    "firebase": "^7.2.2",
+    "dayjs": "^1.8.30",
+    "firebase": "^7.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vue-scrollto": "^2.17.1",
