--- a/.github/workflows/vue-firebase.yml
+++ b/.github/workflows/vue-firebase.yml
@@ -20,7 +20,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: install package
-      run: npm install
+      run: 
+        cd ./functions
+        npm install
     - name: build vue code
       run: npm run build
     - name: deploy to Firebase Hosting
