--- a/.github/workflows/vue-firebase.yml
+++ b/.github/workflows/vue-firebase.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: install package
+      run:  npm install
+    - name: install package (functions)
       run: 
         cd ./functions
         npm install
