--- a/.github/workflows/vue-firebase.yml
+++ b/.github/workflows/vue-firebase.yml
@@ -20,9 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: install package
-      run: 
-        cd ./functions
-        npm install
+      run: npm install
     - name: build vue code
       run: npm run build
     - name: deploy to Firebase Hosting
